--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,10 +13,8 @@ jobs:
     
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.2.0
-    with:
-        server: ftp://185.28.21.71
-        username: u719753598.mlagro.online
-        password: ${{ secrets.password }}
-        protocol: ftps
-        port: 21
+      with:
+        server: ${{ secrets.ftp_host}}
+        username: ${{ secrets.ftp_user }}
+        password: ${{ secrets.ftp_password }}
         server-dir: public_html/
