--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = climate-pkg-MLearningPY
 version = 0.0.1
 author = ROGERIO SANTOS
 author_email = rogerio.dosantos@ifpr.edu.br
-description = A small example package
+description = Pacote Machine Learnig para analise de dados em tempo real do tempo/clima
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/pypa/sampleproject
