--- a/setup.cfg
+++ b/setup.cfg
@@ -4,11 +4,11 @@ version = 0.0.1
 author = ROGERIO SANTOS
 author_email = rogerio.dosantos@ifpr.edu.br
 description = Pacote Machine Learnig para analise de dados em tempo real do tempo/clima
-long_description = file: README.md
+long_description = file: README.md, LICENSE
 long_description_content_type = text/markdown
-url = https://github.com/pypa/sampleproject
+url = https://github.com/ROGERIOPDOSSANTOS/MLearningPython
 project_urls =
-    Bug Tracker = https://github.com/pypa/sampleproject/issues
+    Bug Tracker = https://github.com/ROGERIOPDOSSANTOS/MLearningPython/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
