--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
         pip install pip --upgrade
         pip install -e .[dev]
       - name: Teste with pytest create coverage report
-      - run: pytest ..cov=mlaerningpython ..cov-report=xml
+      - run: pytest --cov=mlaerningpython --cov-report=xml
       - name: Upload coverage to Codecov
       - user: codecov/codecov-action@v2
         with:
