--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: '3.x'
       - name: Install dependecies
-      - run: 
+      - run: |
         pip install pip --upgrade
         pip install -e .[dev]
       - name: Teste with pytest create coverage report
