--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,25 +1,21 @@
 name: Tests
 on:
-  push:
-    branches:
-    - main 
+push:
+branches:
+- main
 jobs:
-  build-and-test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone our repository
-      - uses: actions/checkout@v2
-      - name: Setup latest Python
-      - uses: actions/setup-python@v2
-        with:
-          node-version: '3.x'
-      - name: Install dependecies
-      - run: |
-        pip install pip --upgrade
-        pip install -e .[dev]
-      - name: Teste with pytest create coverage report
-      - run: pytest --cov=mlaerningpython --cov-report=xml
-      - name: Upload coverage to Codecov
-      - user: codecov/codecov-action@v2
-        with:
-        files: .coverage.xml
+build-and-test:
+runs-on: ubuntu-latest
+steps:
+- name: Clone our repository
+uses: actions/checkout@v2
+- name: Setup latest Python
+uses: actions/setup-python@v2
+with:
+python-version: ’3.x’
+- name: Install dependencies
+run: |
+pip install pip --upgrade
+pip install -e .[dev]
+- name: Test with pytest
+run: pytest
