--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,5 +17,9 @@ python-version: ’3.x’
 run: |
 pip install pip --upgrade
 pip install -e .[dev]
-- name: Test with pytest
-run: pytest
+- name: Test with pytest and create coverage report
+run: pytest --cov=MLearningPython --cov-report=xml
+- name: Upload coverage to Codecov
+uses: codecov/codecov-action@v2
+with:
+files: ./coverage.xml
