--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,20 +1,25 @@
-name: Workflow for Codecov example-python
-on: [push, pull_request]
+name: Tests
+on:
+push:
+branches:
+- master
 jobs:
-  run:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-      - name: Run tests and collect coverage
-        run: |
-          coverage run tests.py
-          coverage xml
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2
+build-and-test:
+runs-on: ubuntu-latest
+steps:
+- name: Clone our repository
+uses: actions/checkout@v2
+- name: Setup latest Python
+uses: actions/setup-python@v2
+with:
+python-version: ’3.x’
+- name: Install dependencies
+run: |
+pip install pip --upgrade
+pip install -e .[dev]
+- name: Test with pytest and create coverage report
+run: pytest --cov=MLearningPython --cov-report=xml
+- name: Upload coverage to Codecov
+uses: codecov/codecov-action@v2
+with:
+files: ./coverage.xml
